updated styles syntax

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <nav class="menu">
         <ul class="menu__items">
           <li class="menu__item">
-            <a class="t-header-nav" href="/">Features</a>
+            <a class="nav-text" href="/">Features</a>
           </li>
           <li class="menu__item">
-            <a class="t-header-nav" href="/">Team</a>
+            <a class="nav-text" href="/">Team</a>
           </li>
           <li class="menu__item">
-            <a class="t-header-nav" href="/">Sign In</a>
+            <a class="nav-text" href="/">Sign In</a>
           </li>
         </ul>
       </nav>
