updated styles syntax

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header">
       <a class="brand" href="/">
-        <span class="hidden-text">Fylo</span>
+        <span class="hide">Fylo</span>
         <img
           class="brand__logo__image"
           src="./images/logo.svg"
@@ -223,7 +223,7 @@
             would be happy to help you.
           </p>
           <div class="input-group">
-            <label class="hidden-text" for="email">Email input field</label>
+            <label class="hide" for="email">Email input field</label>
             <input
               class="email-input"
               type="text"
