--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
   <body>
     <header class="header">
         <a class="brand" href="/">
-          <span class="hidden-text">Fylo</span>
+          <span class="hide">Fylo</span>
           <img class="brand__logo__image" src="./images/logo.svg" alt="site logo">
         </a>
         <nav class="menu">
           <ul class="menu__items">
             <li class="menu__item">
-              <a class="t-header-nav" href="/">Features</a>
+              <a class="nav-text" href="/">Features</a>
             </li>
             <li class="menu__item">
-              <a class="t-header-nav" href="/">Team</a>
+              <a class="nav-text" href="/">Team</a>
             </li>
             <li class="menu__item">
-              <a class="t-header-nav" href="/">Sign In</a>
+              <a class="nav-text" href="/">Sign In</a>
             </li>
           </ul>
         </nav>
@@ -34,8 +34,8 @@
             <img class="intro__image" src="./images/illustration-intro.png" alt="image of accessing from anywhere">
           </div>
           <div class="intro__content__container">
-            <h1 class="t-intro-heading intro-heading">All your files in one secure location, accessible anywhere.</h1>
-            <p class="t-intro-body intro-body">Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.</p>
+            <h1 class="intro-heading intro-heading">All your files in one secure location, accessible anywhere.</h1>
+            <p class="intro-body intro-body">Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.</p>
             <button class="button button--intro">Get Started</button>
           </div>
         </section>
@@ -45,80 +45,80 @@
               <div class="feature__card__image__container">
                 <img class="feature__card__image" src="./images/icon-access-anywhere.svg" alt="svg icon for accessing any where">
               </div>
-              <h2 class="t-feature-heading feature-heading">Access your files, anywhere</h2>
-              <p class="t-feature-body">The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.</p>
+              <h2 class="feature-heading feature-heading">Access your files, anywhere</h2>
+              <p class="feature-body">The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.</p>
             </div>
             <div class="feature__card feature_card--upper">
               <div class="feature__card__image__container">
                 <img class="feature__card__image" src="./images/icon-security.svg" alt="svg icon for security">
               </div>
-              <h2 class="t-feature-heading feature-heading">Security you can trust</h2>
-              <p class="t-feature-body">2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files.</p>
+              <h2 class="feature-heading feature-heading">Security you can trust</h2>
+              <p class="feature-body">2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files.</p>
             </div>
             <div class="feature__card">
               <div class="feature__card__image__container">
                 <img class="feature__card__image" src="./images/icon-collaboration.svg" alt="svg icon for real-time collaboration">
               </div>
-              <h2 class="t-feature-heading feature-heading">Real-time collaboration</h2>
-              <p class="t-feature-body">Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
+              <h2 class="feature-heading feature-heading">Real-time collaboration</h2>
+              <p class="feature-body">Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
             </div>
             <div class="feature__card">
               <div class="feature__card__image__container">
                 <img class="feature__card__image" src="./images/icon-any-file.svg" alt="svg icon for file types">
               </div>
-              <h2 class="t-feature-heading feature-heading">Store any type of file</h2>
-              <p class="t-feature-body">Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.</p>
+              <h2 class="feature-heading feature-heading">Store any type of file</h2>
+              <p class="feature-body">Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.</p>
             </div>
           </div>
         </section>
-        <section class="productive">
-          <div class="productive__container">
-            <div class="productive__image__container">
-              <img class="productive__image" src="./images/illustration-stay-productive.png" alt="image for productive">
+        <section class="prod">
+          <div class="prod__container">
+            <div class="prod__image__container">
+              <img class="prod__image" src="./images/illustration-stay-productive.png" alt="image for productive">
             </div>
-            <div class="productive__copy">
-              <h2 class="t-productive-heading">Stay productive, wherever you are</h2>
-              <p class="t-productive-body">Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
-              <p class="t-productive-body">Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
-              <a class="t-productive-link productive-link" href="/">See how Fylo works</a>
+            <div class="prod__copy">
+              <h2 class="prod-heading">Stay productive, wherever you are</h2>
+              <p class="prod-body">Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
+              <p class="prod-body">Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
+              <a class="prod-link prod-link" href="/">See how Fylo works</a>
             </div>
           </div>
         </section>
         <section class="testimonials">
           <div class="testimonials__container">
             <div class="testimonial_card">
-              <p class="t-testimonial-body">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+              <p class="test-body">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
               <div class="profile">
                 <div class="profile__avatar">
                   <img class="profile__avatar__image" src="./images/profile-1.jpg" alt="user avatar 1">
                 </div>
                 <div class="profile__content">
-                  <h3 class="t-profile-name profile-name">Satish Patel</h3>
-                  <h4 class="t-profile-title">Founder & CEO, Huddle</h4>
+                  <h3 class="profile-name profile-name">Satish Patel</h3>
+                  <h4 class="profile-title">Founder & CEO, Huddle</h4>
                 </div>
               </div>
             </div>
             <div class="testimonial_card">
-              <p class="t-testimonial-body">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+              <p class="test-body">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
               <div class="profile">
                 <div class="profile__avatar">
                   <img class="profile__avatar__image" src="./images/profile-2.jpg" alt="user avatar 2">
                 </div>
                 <div class="profile__content">
-                  <h3 class="t-profile-name profile-name">Bruce McKenzie</h3>
-                  <h4 class="t-profile-title">Founder & CEO, Huddle</h4>
+                  <h3 class="profile-name profile-name">Bruce McKenzie</h3>
+                  <h4 class="profile-title">Founder & CEO, Huddle</h4>
                 </div>
               </div>
             </div>
             <div class="testimonial_card">
-              <p class="t-testimonial-body">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+              <p class="test-body">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
               <div class="profile">
                 <div class="profile__avatar">
                   <img class="profile__avatar__image" src="./images/profile-3.jpg" alt="user avatar 3">
                 </div>
                 <div class="profile__content">
-                  <h3 class="t-profile-name profile-name">Iva Boyd</h3>
-                  <h4 class="t-profile-title">Founder & CEO, Huddle</h4>
+                  <h3 class="profile-name profile-name">Iva Boyd</h3>
+                  <h4 class="profile-title">Founder & CEO, Huddle</h4>
                 </div>
               </div>
             </div>
@@ -126,10 +126,10 @@
         </section>
         <section class="call-to-action">
           <div class="call-to-action__container">
-            <h2 class="t-cta-heading cta-heading">Get early access today</h2>
-            <p class="t-cta-body">It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
+            <h2 class="cta-heading cta-heading">Get early access today</h2>
+            <p class="cta-body">It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
             <div class="input-group">
-              <label class="hidden-text" for="email">Email input field</label>
+              <label class="hide" for="email">Email input field</label>
               <input class="email-input" type="text" id="email" name="email" placeholder="email@example.com">
               <button class="button button--cta">Get Started For Free</button>
             </div>
@@ -146,32 +146,32 @@
               <div class="vector-icon">
                 <img src="./images/icon-location.svg" alt="location icon">
               </div>
-              <p class="t-footer-address">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+              <p class="footer-address">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
             </div>
             <div class="contact">
               <div class="phone">
                 <div class="vector-icon">
                   <img src="./images/icon-phone.svg" alt="phone icon">
                 </div>
-                <p class="t-footer-contact">+1-543-123-4567</p>
+                <p class="footer-contact">+1-543-123-4567</p>
               </div>
               <div class="email">
                 <div class="vector-icon">
                   <img src="./images/icon-email.svg" alt="email icon">
                 </div>
-                <p class="t-footer-contact">example@fylo.com</p>
+                <p class="footer-contact">example@fylo.com</p>
               </div>
             </div>
             <ul class="footer-nav">
-              <li><a class="t-footer-nav-item" href="/">About Us</a></li>
-              <li><a class="t-footer-nav-item" href="/">Jobs</a></li>
-              <li><a class="t-footer-nav-item" href="/">Press</a></li>
-              <li><a class="t-footer-nav-item" href="/">Blog</a></li>
+              <li><a class="footer-nav-item" href="/">About Us</a></li>
+              <li><a class="footer-nav-item" href="/">Jobs</a></li>
+              <li><a class="footer-nav-item" href="/">Press</a></li>
+              <li><a class="footer-nav-item" href="/">Blog</a></li>
             </ul>
             <ul class="footer-nav">
-              <li><a class="t-footer-nav-item" href="/">Contact Us</a></li>
-              <li><a class="t-footer-nav-item" href="/">Terms</a></li>
-              <li><a class="t-footer-nav-item" href="/">Privacy</a></li>
+              <li><a class="footer-nav-item" href="/">Contact Us</a></li>
+              <li><a class="footer-nav-item" href="/">Terms</a></li>
+              <li><a class="footer-nav-item" href="/">Privacy</a></li>
             </ul>
             <div class="socials">
               <div class="social">
