updated footer text

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               <div class="vector-icon">
                 <img src="./images/icon-location.svg" alt="location icon">
               </div>
-              <p class="footer-address">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+              <p class="footer-address">We are currently reloacting to a new physical address to scale our operation.  If you have any questions, please email or contact us on social media.</p>
             </div>
             <div class="contact">
               <div class="phone">
